--- a/billing-fe/src/app/main/customers/customer-form/customer-form.component.html
+++ b/billing-fe/src/app/main/customers/customer-form/customer-form.component.html
@@ -8,7 +8,7 @@
                     <form class="form" [formGroup]="customerForm" (ngSubmit)="onSubmit()">
                         <div class="row">
                             <div class="form-group col-4">
-                                <label for="firstName">First Name</label>
+                                <label for="firstName">{{'CUSTOMER.FIRST_NAME' | translate}}</label>
                                 <input type="text" formControlName="firstName" name="firstName" class="form-control"
                                     [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
                                 <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
