--- a/billing-fe/src/app/main/customers/customers.component.html
+++ b/billing-fe/src/app/main/customers/customers.component.html
@@ -12,6 +12,14 @@
                     </div>
                     <div class="col-md-6 col-12 d-flex justify-content-start justify-content-md-end">
                       <div class="d-flex align-items-center justify-content-end pr-1 pb-1 pb-md-0">
+                        <label class="d-flex align-items-center ml-1 ml-md-0"
+                          >Search:
+                          <input
+                            name="searchValue"
+                            type="search"
+                            class="form-control ml-25"
+                            (keydown.enter)="filterCustomers($event)"
+                        /></label>
                         <a class="btn btn-primary ml-1" rippleEffect routerLink="/customers/add">
                         <i data-feather="plus" class="d-sm-none d-inline-block mr-0 mr-sm-1"></i
                         ><span class="d-none d-sm-inline-block">Add New Customer</span>
@@ -19,8 +27,41 @@
                       </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </div>
-  </div>
-  
+                <ngx-datatable
+                #table
+                class="bootstrap core-bootstrap"
+                [columnMode]="ColumnMode.force"
+                [headerHeight]="40"
+                [footerHeight]="50"
+                rowHeight="auto"
+                [limit]="10"
+                [rows]="rows"
+                [scrollbarH]="true"
+                [externalPaging]="true"
+                [count]="page.totalCount"
+                [offset]="page.pageNumber"
+                [limit]="page.size"
+                (page)="setPage($event)"
+                >
+                <ngx-datatable-column name="Account Number" prop="accountNumber"></ngx-datatable-column>
+                <ngx-datatable-column name="First Name" prop="firstName"></ngx-datatable-column>
+                <ngx-datatable-column name="Last Name" prop="lastName"></ngx-datatable-column>
+                <ngx-datatable-column name="Middle Name" prop="middleName"></ngx-datatable-column>
+                <ngx-datatable-column name="Email Address" prop="email"></ngx-datatable-column>
+
+                <ngx-datatable-column name="Actions" [sortable]="false">
+                  <ng-template ngx-datatable-cell-template let-row="row">
+                    <button type="button" [routerLink]="['edit', row.id]" class="btn btn-icon btn-icon rounded-circle btn-flat-warning" rippleEffect>
+                      <span [data-feather]="'edit'"></span></button
+                    > 
+                    <button type="button" (click)="onDeleteCustomer(row)" class="btn btn-icon btn-icon rounded-circle btn-flat-danger" rippleEffect>
+                      <span [data-feather]="'trash'"></span></button
+                    > 
+                  </ng-template>
+                </ngx-datatable-column>
+                
+              </ngx-datatable>
+        </div>
+    </section>
+</div>
+</div>
